Fixed the alignment style for the admin side navbar logout button.

--- a/resources/css/__admin_aside.scss
+++ b/resources/css/__admin_aside.scss
@@ -129,6 +129,7 @@ aside {
                 form {
                     button {
                         display: flex;
+                        align-items: center;
                         gap: 0.2em;
                         background-color: red;
                         color: #fff;
